# fridge-manager-demo

./: .gitignore  .pre-commit-config.yaml  DevLog.md  Dockerfile  README.md  docker-compose.yml  index.html
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_19_0001_initial_schema.py
backend/core/: config.py  exceptions.py  security.py
backend/models/: __init__.py  database.py  ingredient.py  recipe.py  shopping_list.py  user.py
backend/routers/: auth.py  health.py  ingredients.py  nutrition.py  recipes.py  recognition.py  shopping_list.py
backend/schemas/: auth.py  common.py  ingredient.py  recipe.py  recognition.py  shopping_list.py
backend/services/: ingredient_service.py  nutrition_service.py  recipe_service.py  recognition_service.py  shopping_list_service.py
backend/tests/: conftest.py  test_auth.py  test_ingredients.py  test_nutrition.py  test_recipes.py  test_recognition.py  test_shopping_list.py
docs/: CONTEST_POST.md  DESIGN_SPEC.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: auth-real.spec.js  smoke.spec.js
frontend/src/: App.jsx  config.js  main.jsx
frontend/src/api/: auth.js  client.js  ingredients.js  nutrition.js  recipes.js  (+2 more)
frontend/test-results/: .last-run.json
frontend/tests/: AuthPage.test.jsx  HomePage.test.jsx  NutritionPage.test.jsx  RecipeCard.test.jsx  ShoppingList.test.jsx  setup.js
(+19 files in other folders)
